--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#151C2B"
-    tools:context=".MainActivity">
+    tools:context=".activity.ProfileActivity">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
