--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:hint="@string/hint_matricule"
-            android:inputType="text"
+            android:inputType="number"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/input_login"
