--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,183 +20,87 @@
         android:background="#00000000"
         android:minHeight="82dp"
         android:theme="?attr/actionBarTheme"
-        app:title="My Profile" />
+        app:title="HOME" />
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp">
-
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="270dp"
+            android:layout_height="270dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="65sp"
+            android:layout_marginTop="65dp"
+            android:layout_marginBottom="25dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="35dp"
-                app:cardBackgroundColor="@color/bluedark"
-                app:cardCornerRadius="13dp"
-                app:cardElevation="6dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
-
-                <LinearLayout
+                android:paddingBottom="15dp">
+                <TextView
+                    android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical">
+                    android:text="@string/instruction"
+                    android:textSize="20sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="15dp">
+                <EditText
+                    android:id="@+id/imma"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/input_imma_ex_bg"
+                    android:hint="@string/immmatriculation_ex"
+                    android:padding="10dp"
+                    android:gravity="center"
+                    android:textSize="30dp"
+                    android:singleLine="true"
+                    android:inputType="text"
+                    android:textColor="@color/input_imma_ex"
+                    android:textColorHint="@color/input_imma_ex_hint"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/btn_valider"
+                    android:background="@color/btn_valider"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/user" />
-
-                    <TextView
-                        android:id="@+id/txtNom"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_horizontal"
-                        android:text="Nom"
-                        android:textSize="22sp"
-                        android:textStyle="bold"
-                        android:padding="10dp"
-                        android:paddingBottom="0dp"
-                        android:textColor="@android:color/white"/>
-                    <TextView
-                        android:id="@+id/txtPrenom"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center_horizontal"
-                        android:text="Prenom"
-                        android:textSize="19sp"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/white"/>
-
-                    <TextView
-                        android:id="@+id/txtMatricule"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center_horizontal"
-                        android:text="Matricule"
-                        android:textColor="#CCCCCC"
-                        android:textSize="15sp"
-                        android:padding="10dp"/>
-
-                    <Button
-                        android:id="@+id/btnLogout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:paddingStart="20dp"
-                        android:paddingTop="10dp"
-                        android:paddingEnd="20dp"
-                        android:paddingBottom="10dp"
-                        android:background="@color/btn_logut_bg"
-                        android:text="@string/btn_logout"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginEnd="10dp"
-                            android:layout_weight="1"
-                            android:gravity="center_horizontal"
-                            android:orientation="vertical"
-                            android:layout_marginRight="10dp">
-
-                            <TextView
-                                android:id="@+id/textView6"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="3658"
-                                android:textColor="@color/white"
-                                android:textSize="17sp" />
-
-                            <TextView
-                                android:id="@+id/textView7"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
-                                android:text="Project"
-                                android:textColor="@color/gris" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginEnd="10dp"
-                            android:layout_weight="1"
-                            android:gravity="center_horizontal"
-                            android:orientation="vertical"
-                            android:layout_marginRight="10dp">
-
-                            <TextView
-                                android:id="@+id/textView8"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="7025"
-                                android:textColor="@color/white"
-                                android:textSize="17sp" />
-
-                            <TextView
-                                android:id="@+id/textView9"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
-                                android:text="Follower"
-                                android:textColor="@color/gris" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center_horizontal"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/textView10"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="5087"
-                                android:textColor="@color/white"
-                                android:textSize="17sp" />
-
-                            <TextView
-                                android:id="@+id/textView11"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
-                                android:text="Following"
-                                android:textColor="@color/gris" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </ScrollView>
+<!--        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="406dp"
+            android:layout_height="331dp"
+            android:background="#007C7C7C"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent">
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Appuyer sur la touche pour lancer un scan."
+                android:textSize="20sp" />
+        </ScrollView>-->
+    </LinearLayout>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
@@ -215,7 +119,7 @@
         android:id="@+id/btnCapture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/photo"
+        android:src="@drawable/barcode"
         app:layout_anchor="@id/bottomAppBar"
         app:tint="@color/colorWhite"
         />
