--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,97 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#151C2B"
-    tools:context=".activity.TestActivity">
+    tools:context=".activity.TestActivity"
+    android:id="@+id/rl"
+    android:padding="16dp"
+    android:background="#edf2ea">
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:src="@drawable/half_circle" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00000000"
-        android:minHeight="82dp"
-        android:theme="?attr/actionBarTheme"
-        app:title="My Profile" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="100dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/button"
-            android:layout_width="208dp"
-            android:layout_height="47dp"
-            android:layout_marginTop="32dp"
-            android:text="Take a picture"
-            app:icon="@android:drawable/ic_menu_camera"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-                <ImageView
-                    android:id="@+id/photo"
-                    android:layout_width="270dp"
-                    android:layout_height="270dp"
-                    app:layout_constraintBottom_toTopOf="@+id/scrollView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/button"
-                    app:srcCompat="@drawable/ic_launcher_background"
-                    android:layout_margin="65sp" />
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="406dp"
-            android:layout_height="331dp"
-            android:background="#7C7C7C"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Hello."
-                android:textSize="20sp" />
-        </ScrollView>
-    </LinearLayout>
-
-    </ScrollView>
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:backgroundTint="@color/colorPrimary"
-        app:menu="@menu/add_bar_menu"
-        app:fabAlignmentMode="end"
-        app:hideOnScroll="true"
-        app:fabCradleMargin="10dp"
-        app:fabCradleRoundedCornerRadius="50dp"
-        tools:ignore="UnusedAttribute" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnCapture"
+        android:id="@+id/iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/photo"
-        app:layout_anchor="@id/bottomAppBar"
-        app:tint="@color/colorWhite"
-        />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:layout_centerInParent="true"/>
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Circular It"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
+</RelativeLayout>
