--- a/app/src/main/res/drawable/half_circle.xml
+++ b/app/src/main/res/drawable/half_circle.xml
@@ -11,7 +11,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval">
 
-            <solid android:color="#003FBB" />
+            <solid android:color="@color/blue" />
         </shape>
     </item>
 
