--- a/app/src/main/res/menu/add_bar_menu.xml
+++ b/app/src/main/res/menu/add_bar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/menuProfile"
-        android:icon="@drawable/user"
+        android:icon="@drawable/ic_account"
         android:title="@string/profile"
         app:showAsAction="ifRoom"/>
 
