--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -128,18 +128,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
             android:background="#ea4c88"
-            android:text="@string/btn_register"
+            android:text="Ajouter"
             android:textColor="@color/white" />
 
         <!-- Link to Login Screen -->
 
         <Button
-            android:id="@+id/btnLinkToLoginScreen"
+            android:id="@+id/btnBack"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dip"
             android:background="@null"
-            android:text="@string/btn_link_to_login"
+            android:text="Retour au menu administrateur"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="15dp" />
