--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -20,17 +20,16 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:contentDescription="Hello"
-        android:src="@mipmap/ic_launcher_round"/>
+        android:src="@drawable/user"/>
 
     <TextView
         android:id="@+id/title"
-        android:layout_toRightOf="@id/img"
-        android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/img"
         android:text="BONJOUR"
-        android:textStyle="bold"
-        android:layout_marginLeft="5dp"/>
+        android:textStyle="bold" />
     <TextView
         android:id="@+id/subtitle"
         android:layout_width="match_parent"
